Change colors from hex to rgb

--- a/src/globals.css
+++ b/src/globals.css
@@ -73,60 +73,60 @@
   }
 
   .color-blind {
-    --color-ds-pink-default: #f01f7a;
-    --color-ds-pink-secondary: #ff4a89;
-    --color-ds-pink-tertiary: #d10d62;
+    --color-ds-pink-default: 240, 31, 122;
+    --color-ds-pink-secondary: 255, 74, 137;
+    --color-ds-pink-tertiary: 209, 13, 98;
 
-    --color-ds-blue-default: #0088e9;
-    --color-ds-blue-light: #52b7ff;
-    --color-ds-blue-medium: #0095ff;
-    --color-ds-blue-darker: #0071c2;
-    --color-ds-blue-quinary: #015896;
-    --color-ds-blue-senary: #002d4d;
-    --color-ds-blue-selected: #e6f1ff;
+    --color-ds-blue-default: 0, 136, 233;
+    --color-ds-blue-light: 82, 183, 255;
+    --color-ds-blue-medium: 0, 149, 255;
+    --color-ds-blue-darker: 0, 113, 194;
+    --color-ds-blue-quinary: 1, 88, 150;
+    --color-ds-blue-senary: 0, 45, 77;
+    --color-ds-blue-selected: 230, 241, 255;
 
-    --color-ds-gray-default: #0e1b29;
-    --color-ds-gray-primary: #f7f8fb;
-    --color-ds-gray-secondary: #eaebef;
-    --color-ds-gray-tertiary: #d8dce2;
-    --color-ds-gray-quaternary: #999fa7;
-    --color-ds-gray-quinary: #68737e;
-    --color-ds-gray-senary: #394754;
-    --color-ds-gray-octonary: #222f3d;
+    --color-ds-gray-default: 14, 27, 41;
+    --color-ds-gray-primary: 247, 248, 251;
+    --color-ds-gray-secondary: 234, 235, 239;
+    --color-ds-gray-tertiary: 216, 220, 226;
+    --color-ds-gray-quaternary: 153, 159, 167;
+    --color-ds-gray-quinary: 104, 115, 126;
+    --color-ds-gray-senary: 57, 71, 84;
+    --color-ds-gray-octonary: 34, 47, 61;
 
-    --color-gray-300: #c7cbd1;
+    --color-gray-300: 199, 203, 209;
 
-    --color-orange-100: #ffedd5;
-    --color-orange-500: #f97316;
+    --color-orange-100: 255, 237, 213;
+    --color-orange-500: 249, 115, 22;
 
-    --color-ds-primary-green: #27b340;
-    --color-ds-primary-red: #27b340;
-    --color-ds-primary-purple: #ac39cf;
-    --color-ds-primary-yellow: #ca8e00;
+    --color-ds-primary-green: 39, 179, 64;
+    --color-ds-primary-red: 104, 115, 126;
+    --color-ds-primary-purple: 172, 57, 207;
+    --color-ds-primary-yellow: 202, 142, 0;
 
-    --color-ds-coverage-partial: #fff9d8;
+    --color-ds-coverage-partial: 255, 249, 216;
 
-    --color-ds-error-quinary: #ff9b9b;
-    --color-ds-error-nonary: #590808;
+    --color-ds-error-quinary: 255, 155, 155;
+    --color-ds-error-nonary: 89, 8, 8;
 
-    --color-codecov-red: #27b340;
-    --color-codecov-orange: #ffc273;
-    --color-codecov-footer: #07111b;
+    --color-codecov-red: 104, 115, 126;
+    --color-codecov-orange: 255, 194, 115;
+    --color-codecov-footer: 7, 17, 27;
 
-    --color-warning-100: #ffebd2;
-    --color-warning-900: #473610;
+    --color-warning-100: 255, 235, 210;
+    --color-warning-900: 71, 54, 16;
 
-    --color-success-500: #73ff9e;
-    --color-success-100: #deffe8;
+    --color-success-500: 115, 255, 158;
+    --color-success-100: 222, 255, 232;
 
-    --color-error-100: #ffedf0;
+    --color-error-100: 255, 237, 240;
 
-    --color-info-100: #dff2ff;
-    --color-info-500: #a3d9ff;
-    --color-info-900: #013b65;
+    --color-info-100: 223, 242, 255;
+    --color-info-500: 163, 217, 255;
+    --color-info-900: 1, 59, 101;
 
-    --color-github: #333333;
-    --color-gitlab: #fc6d26;
-    --color-bitbucket: #0052cc;
+    --color-github: 51, 51, 51;
+    --color-gitlab: 252, 109, 38;
+    --color-bitbucket: 0, 82, 204;
   }
 }
