--- a/src/ui/CoverageAreaChart/chart.css
+++ b/src/ui/CoverageAreaChart/chart.css
@@ -1,44 +1,44 @@
-.coverageOverTimeChart title {
+.coverageAreaChart title {
   pointer-events: none;
 }
 
-.coverageOverTimeChart {
+.coverageAreaChart {
   @apply max-h-[110px] md:max-h-[140px] lg:max-h-[190px] xl:max-h-[230px]  2xl:max-h-[265px] !important;
 }
 
-.coverageOverTimeChart .coverage-line path {
+.coverageAreaChart .coverage-line path {
   @apply text-ds-pink stroke-current !important;
 }
 
-.coverageOverTimeChart .chart-tooltip path {
+.coverageAreaChart .chart-tooltip path {
   @apply text-ds-gray-tertiary stroke-current !important;
   fill: white !important;
 }
 
-.coverageOverTimeChart .chart-tooltip tspan {
+.coverageAreaChart .chart-tooltip tspan {
   @apply font-sans !important;
   @apply text-ds-gray-octonary font-extralight stroke-current;
 }
 
-.coverageOverTimeChart .date-axis tspan {
+.coverageAreaChart .date-axis tspan {
   text-anchor: start !important;
 }
 
-.coverageOverTimeChart .date-axis:last-child tspan {
+.coverageAreaChart .date-axis:last-child tspan {
   text-anchor: middle !important;
 }
 
-.coverageOverTimeChart .coverage-axis tspan {
+.coverageAreaChart .coverage-axis tspan {
   text-anchor: end !important;
 }
 
-.coverageOverTimeChart .date-axis line,
-.coverageOverTimeChart .coverage-axis line {
+.coverageAreaChart .date-axis line,
+.coverageAreaChart .coverage-axis line {
   @apply text-ds-gray-tertiary stroke-current !important;
 }
 
-.coverageOverTimeChart .date-axis tspan,
-.coverageOverTimeChart .coverage-axis tspan {
+.coverageAreaChart .date-axis tspan,
+.coverageAreaChart .coverage-axis tspan {
   @apply font-sans !important;
   @apply font-light text-ds-gray-quinary stroke-current;
 }
