add blue septenary var to globals and add to tailwind config

--- a/src/globals.css
+++ b/src/globals.css
@@ -27,6 +27,7 @@
     --color-ds-blue-quinary: 1, 88, 150;
     --color-ds-blue-senary: 0, 45, 77;
     --color-ds-blue-selected: 230, 241, 255;
+    --color-ds-blue-septenary: 34, 47, 61;
 
     --color-ds-gray-default: 14, 27, 41;
     --color-ds-gray-primary: 247, 248, 251;
