--- a/src/ui/CoverageAreaChart/chart.css
+++ b/src/ui/CoverageAreaChart/chart.css
@@ -11,13 +11,16 @@
 }
 
 .coverageAreaChart .chart-tooltip path {
-  @apply text-ds-gray-tertiary stroke-current !important;
+  @apply stroke-current !important;
   fill: white !important;
+  color: #68737e;
 }
 
 .coverageAreaChart .chart-tooltip tspan {
   @apply font-sans !important;
-  @apply text-ds-gray-octonary font-extralight stroke-current;
+  @apply font-extralight stroke-current;
+
+  color: #68737e;
 }
 
 .coverageAreaChart .date-axis tspan {
@@ -34,11 +37,15 @@
 
 .coverageAreaChart .date-axis line,
 .coverageAreaChart .coverage-axis line {
-  @apply text-ds-gray-tertiary stroke-current !important;
+  @apply stroke-current !important;
+
+  color: #68737e;
 }
 
 .coverageAreaChart .date-axis tspan,
 .coverageAreaChart .coverage-axis tspan {
   @apply font-sans !important;
-  @apply font-light text-ds-gray-quinary stroke-current;
+  @apply font-light stroke-current;
+
+  color: #68737e;
 }
