Coverage area chart style update (#1882)
* Design pairing with Kyle, fixes the gradient, the line + gradient is now different colors, make the text match the new one off color for svg color weirdness.

* Update area chart colors to source values from tailwind config. Kinda janky, there is a better way but it would require a big refactor.

* jank color attempt #2

* forgot to fix the css

--- a/src/ui/CoverageAreaChart/chart.css
+++ b/src/ui/CoverageAreaChart/chart.css
@@ -11,13 +11,13 @@
 }
 
 .coverageAreaChart .chart-tooltip path {
-  @apply text-ds-gray-tertiary stroke-current !important;
+  @apply text-ds-gray-quinary stroke-current !important;
   fill: white !important;
 }
 
 .coverageAreaChart .chart-tooltip tspan {
   @apply font-sans !important;
-  @apply text-ds-gray-octonary font-extralight stroke-current;
+  @apply text-ds-gray-quinary font-extralight stroke-current;
 }
 
 .coverageAreaChart .date-axis tspan {
@@ -34,11 +34,11 @@
 
 .coverageAreaChart .date-axis line,
 .coverageAreaChart .coverage-axis line {
-  @apply text-ds-gray-tertiary stroke-current !important;
+  @apply text-ds-gray-quinary stroke-current !important;
 }
 
 .coverageAreaChart .date-axis tspan,
 .coverageAreaChart .coverage-axis tspan {
   @apply font-sans !important;
-  @apply font-light text-ds-gray-quinary stroke-current;
+  @apply text-ds-gray-quinary font-light stroke-current;
 }
