add primary base to the color palette

--- a/src/globals.css
+++ b/src/globals.css
@@ -47,6 +47,7 @@
     --color-ds-primary-red: 245, 32, 32;
     --color-ds-primary-purple: 172, 57, 207;
     --color-ds-primary-yellow: 244, 176, 27;
+    --color-ds-primary-base: 14, 27, 41;
 
     --color-ds-coverage-partial: 255, 249, 216;
 
