--- a/src/ui/Table/Table.css
+++ b/src/ui/Table/Table.css
@@ -1,60 +1,62 @@
 .tableui {
-  @apply @container/table text-ds-gray-octonary;
+  @apply @container/table text-ds-gray-octonary overflow-auto;
 }
-
-/* .tableui > div {
-    @apply px-4 @sm/table:px-6 @lg/table:px-8;
-}
-
-.tableui > div > div {
-    @apply -mx-4 @sm/table:-mx-0;
-} */
 
 .tableui table {
   @apply min-w-full divide-y divide-ds-gray-tertiary border-t border-ds-gray-tertiary;
 }
 
+.tableui caption {
+  @apply sr-only caption-top;
+}
+
 .tableui tr {
-  @apply text-left;
+  @apply text-left border-b border-gray-200 last:border-b-0;
 }
 
 .tableui th {
-  @apply text-sm font-semibold text-ds-gray-quinary;
+  @apply font-sans text-sm font-semibold text-ds-gray-quinary py-2 px-0 @sm:px-3.5;
+}
+
+.tableui td {
+  @apply py-3 sm:px-4;
 }
 
 /* <div className="tableui" data-highlight-row="onHover"> */
 /* <tr data-highlight-row="onHover"> */
 .tableui[data-highlight-row='onHover'] tr,
-tr[data-highlight-row='onHover'] {
+.tableui tr[data-highlight-row='onHover'] {
   @apply hover:bg-ds-gray-primary;
-}
-
-.tableui tr > th {
-  @apply font-sans;
-}
-
-.tableui td,
-.tableui th {
-  @apply px-3 py-4;
 }
 
 /* <div  className="tableui" data-type="numeric"> */
 /* <td data-type="numeric"> */
 .tableui[data-type='numeric'] td,
-td[data-type='numeric'] {
+.tableui td[data-type='numeric'] {
   @apply font-mono text-right;
 }
 
 /* <div className="tableui" data-type="numeric"> */
 /* <th data-type="numeric"> */
 .tableui[data-type='numeric'] th,
-th[data-type='numeric'] {
+.tableui th[data-type='numeric'] {
   @apply text-right;
 }
 
-/* <div className="tableui" data-sortable="true"> */
 /* <th data-sortable="true"> */
-.tableui[data-sortable='true'] th,
-th[data-sortable='true'] {
-  @apply cursor-pointer;
+.tableui th[data-sortable='true'] {
+  @apply cursor-pointer select-none;
+}
+
+/* TODO make hover whole th */
+.tableui [data-sort-direction] {
+  @apply transform opacity-0 transition-opacity ease-in duration-100;
+}
+
+.tableui [data-sort-direction='asc'] {
+  @apply opacity-100;
+}
+
+.tableui [data-sort-direction='desc'] {
+  @apply opacity-100 rotate-180;
 }
